theme 1 and 3 changes

--- a/app/assets/stylesheets/theme3.css
+++ b/app/assets/stylesheets/theme3.css
@@ -10,8 +10,7 @@
  *
  *= require_self
  *= require scaffolds
- *= require theme3/base-bootstrap
- *= require theme3/cyborg
+ *= require theme3/united
  *= require jquery.ui.core
  *= require jquery.ui.theme
  *= require dataTables/jquery.dataTables.bootstrap
