improvements on member show

--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -152,7 +152,7 @@
 <table class="table table-bordered table-condensed">
   <thead>
     <tr class="box_title">
-      <td><h4>Active Credit Card</h4></td>
+      <th><h4>Active Credit Card</h4></th>
       <td style="border: none; text-align: right;">
         <%= link_to(new_credit_card_path, :class => "btn btn-success") do %> 
           <i class="icon-plus"></i> Add a credit card
