--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,11 @@
         <div class="row">
           <div class="span12">
             <%= render :partial => "shared/flash_messages", :locals => {:flash => flash} %>
-
             <%= render :partial => 'shared/breadcrumb' %>
-
+          </div>
+        </div><!--/row-->
+        <div class="row">
+          <div class="span12">
             <%= yield %>
           </div>
         </div><!--/row-->
