--- a/app/views/shared/_member_information.html.erb
+++ b/app/views/shared/_member_information.html.erb
@@ -1,4 +1,9 @@
-<h1> <%= params[:controller].humanize.singularize %>: <%= @current_member.visible_id %> - <%= @current_member.first_name %> <%= @current_member.last_name %> 
+<h1> 
+  <% unless params[:controller].include?('terms_of_membership') %>
+    <%= params[:controller].humanize.singularize %>:
+  <% end %>
+  <%= @current_member.visible_id %> - 
+  <%= @current_member.first_name %> <%= @current_member.last_name %> 
 	<% if @current_member.blacklisted? %>
   &nbsp;<small>Blacklisted! </small>
   <% end %>
