look and feel improvements

--- a/app/views/layouts/2-cols.html.erb
+++ b/app/views/layouts/2-cols.html.erb
@@ -4,13 +4,10 @@
     <%= render :partial => "shared/head"%>
   </head>
   <body>
-
     <%= render :partial => "shared/header" %>
-
-    <%= render :partial => "shared/flash_messages", :locals => {:flash => flash}%>
-
     <div class="container">
       <div class="content">
+        <%= render :partial => "shared/flash_messages", :locals => {:flash => flash}%>
         <%= render :partial => 'shared/breadcrumb' %>
         <div class="row">
           <div class="span9">
@@ -20,10 +17,7 @@
         </div><!--/row-->
       </div><!--/content-->
 
-      <footer>
-        <p>&copy; Company 2012</p>
-      </footer>
-
+      <%= render :partial => "shared/footer"%>
     </div> <!-- /container -->
 
   </body>
