--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,9 +22,7 @@
         </div><!--/row-->
       </div><!--/content-->
       <br>
-      <footer>
-        <p>&copy; Company 2012</p>
-      </footer>
+      <%= render :partial => "shared/footer"%>
     </div> <!-- /container -->
   </body>
 </html>
