--- a/app/views/members/_operations.html.erb
+++ b/app/views/members/_operations.html.erb
@@ -1,5 +1,4 @@
-
-<table id="operations_table" class="display" data-source="<%= operations_url(format: "json") %>">
+<table id="operations_table" class="table table-bordered table-condensed dataTable" data-source="<%= operations_url(format: "json") %>">
   <thead>
     <tr>
       <th> ID </th>
