--- a/app/assets/stylesheets/theme3.css
+++ b/app/assets/stylesheets/theme3.css
@@ -13,6 +13,7 @@
  *= require theme3/united
  *= require jquery.ui.core
  *= require jquery.ui.theme
+ *= require jquery.ui.datepicker
  *= require dataTables/jquery.dataTables.bootstrap
  *= require dataTables/src/demo_table_jui
  *= require theme3/override
