ref#21276 - Changed name from trial_days to provisional_days.

--- a/app/views/terms_of_memberships/show.html.erb
+++ b/app/views/terms_of_memberships/show.html.erb
@@ -14,8 +14,8 @@
         <%= @tom.installment_type %> </td>
     <td> <%= t('activerecord.attributes.terms_of_membership.grace_period') %>: 
          <%= @tom.grace_period %> </td>
-    <td> <%= t('activerecord.attributes.terms_of_membership.trial_days') %>: 
-         <%= @tom.trial_days %> </td>    
+    <td> <%= t('activerecord.attributes.terms_of_membership.provisional_days') %>: 
+         <%= @tom.provisional_days %> </td>    
   </tr>
   <tr>
     <td colspan="5" class="comment"> <%= t('activerecord.attributes.terms_of_membership.description') %>: 
