--- a/app/views/members/add_club_cash.html.erb
+++ b/app/views/members/add_club_cash.html.erb
@@ -6,7 +6,7 @@
       <td >
         <div class="input-prepend input-append">  
 	      <%= t('activerecord.attributes.club_cash_transaction.amount') %>
-	      <%= text_field :club_cash_transaction, :amount, 
+	      <%= text_field nil, :amount, 
             :value => (params[:club_cash_transaction][:amount] if params[:club_cash_transaction]) %>
       	</div>
       </td>
@@ -14,7 +14,7 @@
     <tr> 
       <td> 
 	    <%= label :description, t('activerecord.attributes.club_cash_transaction.description') %>
-	    <%= text_area :club_cash_transaction, :description,:style => 'width: 99%; height: 200px' %>
+	    <%= text_area nil, :description, :style => 'width: 99%; height: 200px' %>
       </td>
     </tr>
     <tr>
