--- a/app/views/members/_transactions.html.erb
+++ b/app/views/members/_transactions.html.erb
@@ -1,5 +1,5 @@
 
-<table id="transactions_table" class="display" data-source="<%= transactions_url(format: "json") %>">
+<table id="transactions_table" class="table table-bordered table-condensed dataTable" data-source="<%= transactions_url(format: "json") %>">
   <thead>
     <tr>
       <th> <%= t('activerecord.attributes.transaction.date') %> </th>
