--- a/app/views/domains/index.html.erb
+++ b/app/views/domains/index.html.erb
@@ -1,6 +1,6 @@
 <%- model_class = Domain.new.class -%>
 <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
-<table id="domains_table" class="display" data-source="<%= domains_url(format: "json") %>">
+<table id="domains_table" class="table table-bordered table-condensed dataTable" data-source="<%= domains_url(format: "json") %>">
   <thead>
     <tr>
       <th><%= model_class.human_attribute_name(:id) %></th>
