--- a/app/views/admin/agents/index.html.erb
+++ b/app/views/admin/agents/index.html.erb
@@ -1,4 +1,10 @@
-<%= render :partial => 'shared/page_header', :locals => { :title_text => t('.title'),:new_path => new_admin_agent_path} %>
+
+<div class="page-header">
+  <h1> <%= t('.title') %> </h1>
+    <%= link_to(new_admin_agent_path, :class => "btn btn-primary btn_on_header") do %> 
+      <i class="icon-plus"></i> New Agent
+  <% end %>
+</div>
 
 <table id="agents_table" class="table table-bordered table-condensed dataTable" data-source="<%= admin_agents_url(format: "json") %>">
   <thead>
@@ -14,9 +20,6 @@
   <tbody>
   </tbody>
 </table>
-
-
-
 
 <script>
   $(document).ready(agent_index_functions(<% Agent.datatable_columns.size %>));
