added feature to show member's error on the form.

--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -116,3 +116,8 @@
   <%= f.hidden_field :enrollment_amount, :value => 0.0 %>
 <% end %>
 
+<div id="error_explanation">
+  <h2> Errors </h2>
+  <ul>
+  </ul>
+</div>
