--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag(members_path, :method => 'post', :id => 'at_least_one_required' ,:html => { :class => 'well form-inline' }) do |f| %>
+<%= form_tag(members_search_result_path, :method => 'get', :id => 'at_least_one_required' ,:html => { :class => 'well form-inline' }) do |f| %>
 
 <section>
   <div class="page-header">
@@ -13,104 +13,122 @@
   <div class="row-fluid">
 
     <div class="span4">
-      <div class="well" style="min-height: 250px;">
-        <h3>Personal Details</h3>
-        <p>
-         <table>
-            <tr>
-              <td><%= t('activerecord.attributes.member.member_id') %></td>
-              <td>  <%= text_field :member, :member_id, :class => 'test_field', 
-                               :value => (params[:member][:member_id] if params[:member])%>
-              </td>
-            </tr>
-            <tr>
-              <td><%= t('activerecord.attributes.member.first_name') %></td>
-              <td><%= text_field :member, :first_name, :class => 'test_field', 
-                               :value => (params[:member][:first_name] if params[:member]) %>
-              </td>
-            </tr>
-            <tr>
-              <td><%= t('activerecord.attributes.member.last_name') %></td>
-              <td><%= text_field :member, :last_name, :class => 'test_field',
-                               :value => (params[:member][:last_name] if params[:member]) %>
-              </td>
-            </tr>
-            <tr>
-              <td><%= t('activerecord.attributes.member.email') %></td>
-              <td><%= text_field :member, :email, :class => 'text_field',
-                               :value => (params[:member][:email] if params[:member]) %>         
-              </td>
-            </tr>
-            <tr>
-              <td><%= t('activerecord.attributes.member.phone_number') %></td>
-              <td><%= text_field :member, :phone_number, :class => 'test_field',
-                               :value => (params[:member][:phone_number] if params[:member]) %>
-              </td>
-            </tr>
-          </table>
-
-        </p>
-      </div>
+      <table class="table table-bordered table-condensed table-nohover">
+        <thead>
+          <tr class="box_title"><th><h4>Personal Details</h4></th></tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td style="height: 270px;">
+             <table class="hidden_table_border">
+                <tr>
+                  <td><%= t('activerecord.attributes.member.member_id') %></td>
+                  <td>  <%= text_field :member, :member_id, :class => 'test_field', 
+                                   :value => (params[:member][:member_id] if params[:member])%>
+                  </td>
+                </tr>
+                <tr>
+                  <td><%= t('activerecord.attributes.member.first_name') %></td>
+                  <td><%= text_field :member, :first_name, :class => 'test_field', 
+                                   :value => (params[:member][:first_name] if params[:member]) %>
+                  </td>
+                </tr>
+                <tr>
+                  <td><%= t('activerecord.attributes.member.last_name') %></td>
+                  <td><%= text_field :member, :last_name, :class => 'test_field',
+                                   :value => (params[:member][:last_name] if params[:member]) %>
+                  </td>
+                </tr>
+                <tr>
+                  <td><%= t('activerecord.attributes.member.email') %></td>
+                  <td><%= text_field :member, :email, :class => 'text_field',
+                                   :value => (params[:member][:email] if params[:member]) %>         
+                  </td>
+                </tr>
+                <tr>
+                  <td><%= t('activerecord.attributes.member.phone_number') %></td>
+                  <td><%= text_field :member, :phone_number, :class => 'test_field',
+                                   :value => (params[:member][:phone_number] if params[:member]) %>
+                  </td>
+                </tr>
+            </table>
+          </td>
+        </tr>
+      </table>
     </div>
+
     <div class="span4">
-      <div class="well" style="min-height: 250px;">
-        <h3>Contact Details</h3>
-        <p>
-          <table>
-            <tr>
-              <td><%= t('activerecord.attributes.member.city') %></td>
-              <td><%= text_field :member, :city, :class => 'test_field',
-                               :value => (params[:member][:city] if params[:member]) %>
-              </td>
-            </tr>
-            <tr>
-              <td><%= t('activerecord.attributes.member.state') %></td>
-              <td><%= text_field :member, :state, :class => 'test_field',
-                               :value => (params[:member][:state] if params[:member]) %>
-              </td>
-            </tr>
-            <tr>
-              <td><%= t('activerecord.attributes.member.address') %></td>
-              <td><%= text_field :member, :address, :class => 'test_field',
-                               :value => (params[:member][:address] if params[:member]) %>
-              </td>
-            </tr>
-            <tr>
-              <td><%= t('activerecord.attributes.member.zip') %></td>
-              <td><%= text_field :member, :zip, :class => 'test_field',
-                               :value => (params[:member][:zip] if params[:member]) %>
-              </td>
-            </tr>
-            
-          </table>
-        </p>
-      </div>
+      
+      <table class="table table-bordered table-condensed table-nohover">
+        <thead>
+          <tr class="box_title"><th><h4>Contact Details</h4></th></tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td style="height: 270px;">
+
+              <table class="hidden_table_border">
+                <tr>
+                  <td><%= t('activerecord.attributes.member.city') %></td>
+                  <td><%= text_field :member, :city, :class => 'test_field',
+                                   :value => (params[:member][:city] if params[:member]) %>
+                  </td>
+                </tr>
+                <tr>
+                  <td><%= t('activerecord.attributes.member.state') %></td>
+                  <td><%= text_field :member, :state, :class => 'test_field',
+                                   :value => (params[:member][:state] if params[:member]) %>
+                  </td>
+                </tr>
+                <tr>
+                  <td><%= t('activerecord.attributes.member.address') %></td>
+                  <td><%= text_field :member, :address, :class => 'test_field',
+                                   :value => (params[:member][:address] if params[:member]) %>
+                  </td>
+                </tr>
+                <tr>
+                  <td><%= t('activerecord.attributes.member.zip') %></td>
+                  <td><%= text_field :member, :zip, :class => 'test_field',
+                                   :value => (params[:member][:zip] if params[:member]) %>
+                  </td>
+                </tr>
+              </table>
+
+          </td>
+        </tr>
+      </table>
     </div><!--/span-->
     <div class="span4">
-      <div class="well" style="min-height: 250px;">
-        <h3>Payment Details</h3>
-        
-        <p>
-         <table>
-            <tr>
-              <td><%= t('activerecord.attributes.credit_card.next_bill_date') %></td>
-              <td>
-                <%= text_field :member, :next_retry_bill_date, :class => 'text_field datepicker_for_search', :readonly => 'readonly', :value => (params[:member][:next_retry_bill_date] if params[:member]) %> 
-              </td>
-            </tr>
-            <tr>
-              <td><%= t('activerecord.credit_card') %> <%= t('activerecord.attributes.credit_card.last_digits') %></td>
-              <td>
-                <%= text_field :member, :last_digits, :class => 'text_field',
-                               :value => (params[:member][:last_digits] if params[:member]) %> 
-              </td>
-            </tr>
-            
-          </table>
-        </p>
-      </div>
+      
+      <table  class="table table-bordered table-condensed table-nohover">
+        <thead>
+          <tr class="box_title"><th><h4>Payment Details</h4></th></tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td style="height: 270px;">
+              <table class="hidden_table_border">
+                <tr>
+                  <td><%= t('activerecord.attributes.credit_card.next_bill_date') %></td>
+                  <td>
+                    <%= text_field :member, :next_retry_bill_date, :class => 'text_field datepicker_for_search', :readonly => 'readonly', :value => (params[:member][:next_retry_bill_date] if params[:member]) %> 
+                  </td>
+                </tr>
+                <tr>
+                  <td><%= t('activerecord.credit_card') %> <%= t('activerecord.attributes.credit_card.last_digits') %></td>
+                  <td>
+                    <%= text_field :member, :last_digits, :class => 'text_field',
+                                   :value => (params[:member][:last_digits] if params[:member]) %> 
+                  </td>
+                </tr>
+              </table>
+            </td>
+        </tr>
+      </table>
     </div>
+
   </div>
+
   <div class="row-fluid">
     <p style="text-align: right;">
 
