--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -19,7 +19,7 @@
         </thead>
         <tbody>
           <tr>
-            <td style="height: 270px;">
+            <td style="height: 233px;">
              <table class="hidden_table_border">
                 <tr>
                   <td><%= t('activerecord.attributes.member.member_id') %></td>
@@ -65,7 +65,7 @@
         </thead>
         <tbody>
           <tr>
-            <td style="height: 270px;">
+            <td style="height: 233px;">
 
               <table class="hidden_table_border">
                 <tr>
@@ -106,7 +106,7 @@
         </thead>
         <tbody>
           <tr>
-            <td style="height: 270px;">
+            <td style="height: 233px;">
               <table class="hidden_table_border">
                 <tr>
                   <td><%= t('activerecord.attributes.credit_card.next_bill_date') %></td>
@@ -136,7 +136,7 @@
         <i class="icon-refresh"></i> <%= t('clear') %>
       <% end %>
 
-      <button class="btn btn-inverse" style="width: 190px;">
+      <button class="btn" style="width: 190px;">
         <i class="icon-search"></i> <%= t('search') %>
       </button>
     </p>
