--- a/app/views/members/_operations.html.erb
+++ b/app/views/members/_operations.html.erb
@@ -6,6 +6,7 @@
       <th> Operation </th>
       <th> Notes </th>
       <th> Created by </th>
+      <th style="width: 40px;"> Edit </th>
     </tr>
   </thead>
   <tbody>
