--- a/app/views/clubs/edit.html.erb
+++ b/app/views/clubs/edit.html.erb
@@ -1,7 +1,8 @@
 <%- model_class = @club.class -%>
-<h1><%=t '.title', :default => t('helpers.titles.edit', :model => model_class.model_name.human,
+<div class="page-header">
+	<h1><%=t '.title', :default => t('helpers.titles.edit', :model => model_class.model_name.human,
                                  :default => "Edit #{model_class.model_name.human}") %></h1>
-
+</div>
 <%= form_for @club, :as => :club, :url => club_path(:id => @club), :html => { :class => 'form-horizontal' } do |f| %>
 <%= render :partial => 'form', :locals => { :f => f } %>
 <% end %>
