--- a/app/views/clubs/new.html.erb
+++ b/app/views/clubs/new.html.erb
@@ -1,6 +1,8 @@
 <%- model_class = @club.class -%>
-<h1><%=t '.title', :default => t('helpers.titles.new', :model => model_class.model_name.human,
+<div class="page-header">
+	<h1><%=t '.title', :default => t('helpers.titles.new', :model => model_class.model_name.human,
                                :default => "New #{model_class.model_name.human}") %></h1>
+</div>
 <%= form_for @club, :html => { :class => 'form-horizontal' } do |f| %>
   <%= render :partial => 'form', :locals => { :f => f } %>
 <% end %>
