--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -1,6 +1,7 @@
 <%- model_class = @club.class -%>
-<h1><%=t '.title', :default => model_class.model_name.human %></h1>
-
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+</div>
 <p>
   <strong><%= model_class.human_attribute_name(:name) %>:</strong><br>
   <%= @club.name %>
