--- a/app/views/domains/new.html.erb
+++ b/app/views/domains/new.html.erb
@@ -1,7 +1,9 @@
 <%- model_class = @domain.class -%>
 
-<h1><%=t '.title', :default => t('helpers.titles.new', :model => model_class.model_name.human,
+<div class="page-header">
+	<h1><%=t '.title', :default => t('helpers.titles.new', :model => model_class.model_name.human,
                                :default => "New #{model_class.model_name.human}") %></h1>
+</div>
 <%= form_for @domain, :html => { :class => 'form-horizontal' } do |f| %>
 <%= render :partial => 'form', :locals => { :f => f } %>
 <% end %>
