--- a/app/views/domains/show.html.erb
+++ b/app/views/domains/show.html.erb
@@ -1,6 +1,7 @@
 <%- model_class = @domain.class -%>
-<h1><%=t '.title', :default => model_class.model_name.human %></h1>
-
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+</div>
 
 <p>
   <strong><%= model_class.human_attribute_name(:url) %>:</strong><br>
