--- a/app/views/shared/_flash_messages.html.erb
+++ b/app/views/shared/_flash_messages.html.erb
@@ -1,6 +1,8 @@
 <%- flash.each do |type, message| %>
+	<% if type != "timedout" %>
   <div class="<%= twitterized_type(type) %>">
     <a class="close" data-dismiss="alert">×</a>
     <p><%= message %></p>
   </div>
+  <% end %>
 <% end %>
