--- a/app/views/members/_search.html.erb
+++ b/app/views/members/_search.html.erb
@@ -8,6 +8,7 @@
       <th> <%= t('activerecord.attributes.member.external_id') %> </th>
       <th> <%= t('activerecord.attributes.member.full_name') %> </th>
       <th> <%= t('activerecord.attributes.member.full_address') %> </th>
+      <th> <%= t('activerecord.attributes.club.requires_external_id') %> </th>
       <th style="width: 20px;">View</th>
       <th style="width: 20px;">Edit</th>
       <th style="width: 80px;">&nbsp;</th>
@@ -24,6 +25,7 @@
       <td> <%= member.external_id if !member.external_id.nil? %> </td>
       <td> <%= member.full_name %> </td>
       <td> <%= member.full_address %> </td>
+      <td> <%= member.club.requires_external_id %> </td>
       <td><a href="<%= show_member_path(:member_prefix => member.visible_id) %>" class="btn btn-small"><i class="icon-zoom-in"></i> </a></td>
       <td><a href="<%= edit_member_path(:member_prefix => member.visible_id) %>" class="btn btn-small"><i class="icon-pencil"></i> </a></td>
       <td><%= member_action_drop_menu(member) %></td>
