--- a/app/views/clubs/_form.html.erb
+++ b/app/views/clubs/_form.html.erb
@@ -30,6 +30,12 @@
       <%= f.file_field :logo, :class => 'text_field' %>
     </div>
   </div>
+  <div class="control-group">
+    <%= f.label :requires_external_id, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.check_box :requires_external_id, :class => 'check_box' %>
+    </div>
+  </div>
 
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
