--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -14,6 +14,10 @@
   <strong><%= model_class.human_attribute_name(:drupal_username) %>:</strong><br>
   <%= @club.api_type %>
 </p>
+<p>
+  <strong><%= model_class.human_attribute_name(:requires_external_id) %>:</strong><br>
+  <%= @club.requires_external_id %>
+</p>
 
 <div class="form-actions">
   <%= link_to t(:back),
