ref#21490 - Fixed view. Now it shows if credit_card is blacklisted.

--- a/app/views/members/_credit_cards.html.erb
+++ b/app/views/members/_credit_cards.html.erb
@@ -27,7 +27,7 @@
       <td> <%= cc.expire_month %> / <%= cc.expire_year %> </td>
       <td> <%= I18n.l cc.last_successful_bill_date, :format => :long if !cc.last_successful_bill_date.nil? %> </td>
       <td>
-        <% t('activerecord.attributes.credit_card.blacklisted') if cc.blacklisted%>
+        <%= t('activerecord.attributes.credit_card.blacklisted') if cc.blacklisted %>
         <% if cc.can_be_blacklisted? %>
           <%= form_for @cc, :as => :credit_card, :url => credit_card_set_as_blacklisted_path(:credit_card_id => cc.id), do |f|  %> 
             <%= submit_tag 'BlackList', :name => 'blacklist', :class=> "btn btn-warning confirm" %>
