--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -14,95 +14,189 @@
   </tr> 
   <% end %>
   
-  <tr class="control-group" ><td colspan="4"> <b> Demographic Information </b> </td></tr>
-  <tr class="control-group" >  
-    <td><%= f.label :first_name, t('activerecord.attributes.member.first_name'), :class => 'help-inline' %></td>
-    <td><%= f.text_field :first_name, :class => 'text_field'%> </td>
-    <td><%= f.label :last_name,t('activerecord.attributes.member.last_name'), :class => 'help-inline' %></td>
-    <td> <%= f.text_field :last_name, :class => 'text_field'%> </td>
-  </tr>
-  <tr class="control-group" >
-    <td><%= f.label :address, t('activerecord.attributes.member.address'), :class => 'help-inline' %></td>
-    <td> <%= f.text_field :address, :class => 'text_field'%> 
-      <% if !@member.new_record? && !@member.wrong_address.nil? %>
-        <%= t('activerecord.attributes.member.unset_wrong_address') %>
-        <%= check_box :setter, :wrong_address %>
-      <% end %>
-    </td> 
-    <td> <%= f.label :city, t('activerecord.attributes.member.city'), :class => 'help-inline' %> </td>
-    <td> <%= f.text_field :city, :class => 'text_field input-medium'%> </td>
-  </tr>
-  <tr class="control-group" >
-    <td> <%= f.label :state, t('activerecord.attributes.member.state'), :class => 'help-inline' %> </td>
-    <td> <%= f.text_field :state, :class => 'text_field input-medium'%> </td>
-    <td> <%= f.label :zip, t('activerecord.attributes.member.zip'), :class => 'help-inline' %> </td>
-    <td> 
-      <%= f.text_field :zip, :class => 'text_field input-small'%> 
-      <%= render :partial => "shared/help", :locals => { :title => t('example'), :content => t('activerecord.attributes.member.zip_help')} %> 
+<table class="table table-bordered table-condensed table-nohover">
+  <thead>
+    <tr class="box_title"><th colspan="2"><h4>Demographic information</h4></th></tr>
+  </thead>
+  <tbody>
+  <tr>
+    <td style="width: 50%;">
+      <table class="hidden_table_border">
+        <tr>
+          <th>
+            <%= f.label :first_name, t('activerecord.attributes.member.first_name'), :class => 'help-inline' %>
+          </th>
+          <td> 
+            <%= f.text_field :first_name, :class => 'text_field' %> 
+          </td>  
+        </tr>
+        <tr>
+          <th>
+            <%= f.label :address, t('activerecord.attributes.member.address'), :class => 'help-inline' %>
+          </th>
+          <td> 
+            <%= f.text_field :address, :class => 'text_field' %> 
+          </td>  
+        </tr>
+        <tr>
+          <th>
+            <%= f.label :state, t('activerecord.attributes.member.state'), :class => 'help-inline' %>
+          </th>
+          <td> 
+            <%= f.text_field :state, :class => 'text_field' %> 
+          </td>  
+        </tr>
+        <tr>
+          <th>
+            <%= f.label :country, t('activerecord.attributes.member.country'), :class => 'help-inline' %>
+          </th>
+          <td> 
+            <%= f.country_code_select(:country, [[ 'United States', 'US' ]]) %> 
+          </td>  
+        </tr>
+      </table>
+    </td>
+    <td style="width: 50%;">
+      <table class="hidden_table_border">
+        <tr>
+          <th>
+            <%= f.label :last_name, t('activerecord.attributes.member.last_name'), :class => 'help-inline' %>
+          </th>
+          <td> 
+            <%= f.text_field :last_name, :class => 'text_field' %> 
+          </td>  
+        </tr>
+        <tr>
+          <th>
+            <%= f.label :city, t('activerecord.attributes.member.city'), :class => 'help-inline' %>
+          </th>
+          <td> 
+            <%= f.text_field :city, :class => 'text_field' %> 
+          </td>  
+        </tr>
+        <tr>
+          <th>
+            <%= f.label :zip, t('activerecord.attributes.member.zip'), :class => 'help-inline' %>
+          </th>
+          <td> 
+            <%= f.text_field :zip, :class => 'text_field' %>       
+            <%= render :partial => "shared/help", :locals => { :title => t('example'), :content => t('activerecord.attributes.member.zip_help')} %> 
+          </td>  
+        </tr>
+        <tr>
+          <th>
+            <%= f.label :birth_date, t('activerecord.attributes.member.birth_date'), :class => 'help-inline' %>
+          </th>
+          <td> 
+            <%= f.text_field :birth_date, :class => 'datepicker', :readonly => 'readonly' %> 
+          </td>  
+        </tr>
+      </table>
     </td>
   </tr>
-  <tr class="control-group">
-    <td> <%= f.label :country, t('activerecord.attributes.member.country'), :class => 'help-inline' %> </td>
-    <td> <%= f.country_code_select(:country, [[ 'United States', 'US' ]]) %> </td>
-    <td> <%= f.label :birth_date, t('activerecord.attributes.member.birth_date'), :class => 'help-inline' %> </td>
-    <td> <%= f.text_field :birth_date, :class => 'datepicker', :readonly => 'readonly' %> </td>
-  </tr>
+  </tbody>
+</table>
 
-  <tr class="control-group" ><td colspan="4"> <b> Contact Information </b> </td></tr>
-  <tr class="control-group" >
-    <td>
-      <%= f.label :phone_number, t('activerecord.attributes.member.phone_number'), :class => 'help-inline' %>
+<table class="table table-bordered table-condensed table-nohover">
+  <thead>
+    <tr class="box_title"><th colspan="2"><h4>Contact Information</h4></th></tr>
+  </thead>
+  <tbody>
+  <tr>
+    <td style="width: 50%;">
+      <table class="hidden_table_border">
+        <tr>
+          <th>
+            <%= f.label :phone_number, t('activerecord.attributes.member.phone_number'), :class => 'help-inline' %>
+          </th>
+          <td> 
+            <%= f.text_field :phone_number, :class => 'text_field' %> 
+            <%= render :partial => "shared/help", :locals => { :title => t('example'), :content => t('activerecord.attributes.member.phone_number_help')} %>
+          </td>  
+        </tr>
+        <tr>
+          <th>
+            <%= f.label :terms_of_membership_id, t('activerecord.attributes.member.terms_of_membership_id'), :class => 'help-inline' %>
+          </th>
+          <% if @member.new_record? %>
+          <td> 
+            <%= f.select(:terms_of_membership_id, options_from_collection_for_select(@terms_of_memberships, "id", "name")) %>
+          </td>  
+          <% end %>
+        </tr>
+        <tr>
+      </table>
     </td>
-    <td> 
-      <%= f.text_field :phone_number, :class => 'text_field input-medium'%> 
-      <%= render :partial => "shared/help", :locals => { :title => t('example'), :content => t('activerecord.attributes.member.phone_number_help')} %>
-      <% if !@member.new_record? && !@member.wrong_phone_number.nil? %>
-        <%= t('activerecord.attributes.member.unset_wrong_phone_number') %>
-        <%= check_box :setter, :wrong_phone_number %>
-      <% end %>
+    <td style="width: 50%;">
+      <table class="hidden_table_border">
+        <tr>
+          <th>
+            <%= f.label :email, t('activerecord.attributes.member.email'), :class => 'help-inline' %>
+          </th>
+          <td> 
+            <%= f.text_field :email, :class => 'text_field'%>
+          </td>  
+        </tr>
+      </table>
     </td>
-    <td> <%= f.label :email, t('email'), :class => 'help-inline' %> </td>
-    <td> <%= f.text_field :email, :class => 'text_field'%> </td>
-  </tr>  
+  </tr>
+  </tbody>
+</table>
 
-  <% if @member.new_record? %>
-    <tr class="control-group">
-      <td>
-       <%= label :terms_of_membership_id, t('activerecord.attributes.member.terms_of_membership_id'), :class => 'help-inline' %> 
-      </td>
-      <td colspan="3"> 
-        <%= f.select(:terms_of_membership_id, options_from_collection_for_select(@terms_of_memberships, "id", "name")) %>
-      </td>
+<% if @member.new_record? %>
+<table class="table table-bordered table-condensed table-nohover">
+  <thead>
+    <tr class="box_title">
+      <th colspan="2"><h4>Credit Card</h4>
+        <%= f.label :allow_cc_blank,t('Allow blank credit card?'), :class => 'help-inline' %>
+        <%= check_box :setter, :cc_blank %>
+      </th>
     </tr>
-
-    <tr class="control-group" >
-      <td colspan="4"> 
-      <b> Credit Card </b> 
-      <%= f.label :allow_cc_blank,t('Allow blank credit card?'), :class => 'help-inline' %> 
-      <%= check_box :setter, :cc_blank %>
-      </td>
-    </tr>  
-
+  </thead>
+  <tbody>
   <%= f.fields_for :credit_card do |credit_Card| %>
-    <tr class="control-group" >
-      <td>
-        <%= credit_Card.label :encrypted_number, t('activerecord.attributes.credit_card.number'), 
+    <tr>
+      <td style="width: 50%;">
+        <table class="hidden_table_border">
+          <tr>
+            <th>
+              <%= credit_Card.label :encrypted_number, t('activerecord.attributes.credit_card.number'), 
                     :class => 'help-inline' %>
-      </td> 
-      <td> <%= credit_Card.text_field :number, :class => 'text_field input-medium', 
-                                      :name => "member[credit_card][number]"%> </td>
-      <td colspan="2"> 
-        <%= credit_Card.label :expire_month, t('activerecord.attributes.credit_card.expire_month'), :class => 'help-inline' %> 
-        <%=credit_Card.text_field :expire_month, :class => 'text_field input-medium',
+            </th>
+            <td> 
+              <%= credit_Card.text_field :number, :class => 'text_field input-medium', 
+                                      :name => "member[credit_card][number]"%>
+            </td>  
+          </tr>
+        </table>
+      </td>
+      <td style="width: 50%;">
+        <table class="hidden_table_border">
+          <tr>
+            <th>
+              <%= credit_Card.label :expire_month, t('activerecord.attributes.credit_card.expire_month'), :class => 'help-inline' %> 
+            </th>
+            <td> 
+              <%=credit_Card.text_field :expire_month, :class => 'text_field input-medium',
                                   :name => "member[credit_card][expire_month]" %>
-        <%= credit_Card.label :expire_year, t('activerecord.attributes.credit_card.expire_year'), :class => 'help-inline' %> 
-        <%= credit_Card.text_field :expire_year, :class => 'text_field input-small',
+            </td>  
+          </tr>
+          <tr>
+            <th>
+              <%= credit_Card.label :expire_year, t('activerecord.attributes.credit_card.expire_year'), :class => 'help-inline' %>
+            </th>
+            <td> 
+              <%= credit_Card.text_field :expire_year, :class => 'text_field input-small',
                                    :name => "member[credit_card][expire_year]" %>
+            </td>  
+          </tr>
+        </table>
       </td>
     </tr>
   <% end %>
-  </tr>
-  <% end %>
+  </tbody>
+</table>
+<% end %>
 
  <tr class="control-group">
     <th colspan="4"> <%= f.submit nil, :class => 'btn btn-primary' %>
@@ -124,3 +218,6 @@
   <ul>
   </ul>
 </div>
+
+
+
